<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/ListTitle"
            android:text="@string/title_line_view" />

        <me.modesto.learnview.ch2.widget.PathLineView
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            style="@style/ListTitle"
            android:text="@string/title_arc_style" />

        <me.modesto.learnview.ch2.widget.PathArcStyleView
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <TextView
            style="@style/ListTitle"
            android:text="@string/title_arc_start" />

        <me.modesto.learnview.ch2.widget.PathArcStartView
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            style="@style/ListTitle"
            android:text="@string/title_arc_angle" />

        <me.modesto.learnview.ch2.widget.PathArcAngleView
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <TextView
            style="@style/ListTitle"
            android:text="@string/title_add_path" />

        <me.modesto.learnview.ch2.widget.PathAddPathView
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            style="@style/ListTitle"
            android:text="@string/title_direction" />

        <me.modesto.learnview.ch2.widget.PathDirectionView
            android:layout_width="match_parent"
            android:layout_height="120dp" />

        <TextView
            style="@style/ListTitle"
            android:text="@string/title_fill_mode" />

        <me.modesto.learnview.ch2.widget.PathFillModeView
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <TextView
            style="@style/ListTitle"
            android:text="@string/title_reset_path" />

        <me.modesto.learnview.ch2.widget.PathResetPathView
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            style="@style/ListTitle"
            android:text="@string/title_radar_view" />

        <me.modesto.learnview.ch2.widget.PathRadarView
            android:layout_width="match_parent"
            android:layout_height="500dp" />

    </LinearLayout>

</ScrollView>